@@ -14,6 +14,8 @@ $Id$
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Completed support for surface flags in Call of Duty 1 .map files.
+
 * [DanielPharos]: Added Call of Duty 1: United Offensive support.
 
 * [DanielPharos]: Corrected the loading order of pak file: now official pak files are loaded first,
